# systemTrade

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: BOUNDARY.md  legacy_main_trade_mapping.md  main_trade_comparison.md  mysql_execution_schema.md
migrations/: 001_init.sql  002_account_strategy_plan.sql  003_hagfish_live_order_contract.sql  004_halfrise_live_order_contract.sql
system_trade/: __init__.py  account_records.py  config.py  domain.py  exceptions.py  kis_client.py  main.py  order_service.py  repository.py  telegram_notifier.py  tr_ids.py
tests/: test_account_records.py  test_config.py  test_domain.py  test_kis_client.py  test_main_accounts.py  test_order_service.py  test_telegram_notifier.py
