[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "systemtrade"
version = "0.1.0"
description = "KIS-only execution ledger and order gateway"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "pymysql>=1.1.1",
  "cryptography (>=48.0.0,<49.0.0)",
]

[tool.poetry]
packages = [{ include = "system_trade" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
